styles.css
*, *::before, *::after {
    box-sizing: border-box;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
  }
  
 .disclaimer {
   display: none;
 }
  
  body {
    width: 100vw;
    height: 100vh;
    background-color: rgb(0, 68, 102);
    padding: 0;
    margin: 0;

    display: flex;
    justify-content: center; /* center horizontally */
    align-items: center; /* center vertically */
  }

  /* Hud */

  #hud {
    width: 90vw;
    height: 90vh;
    max-height: 100%;

    display: flex;
    flex-flow: column;
    justify-content: start;
    align-items: center; /* center horizontally */
  }

  /* Header */
  
  .hud-elements {
    width: 100%;
    height: 30%;
    max-height: 15%;
    display: flex;
    flex-flow: column;
    justify-content: center;
  }

  #version {
    font-weight: bold;
    color: white;
  }

  #timer {
    width: 100%;
    height: 30%;
    font-size: 3.5vh;
    font-weight: bold;
    color: white;
    text-align: center;
  }

  #hud-text {
    width: 100%;
    height: 30%;
    font-size: 3.5vh;
    font-weight: bold;
    color: white;
    text-align: center;
  }

  #progress-bar {
    width: 80%;
    height: 25%;
    background-color: white;
    border: 0.2rem solid black;
    border-radius: 50px;
    align-self: center;
    overflow: hidden;
  }

  #progress-bar-full {
    width:0%;
    height: 100%;
    background: rgb(0, 255, 255);
  }
  
  /* Question Window */

  .question-window {
    width: 100%;
    max-height: 85%;
    flex: 1; /* flex to fill available height */
    background-color: white;
    border-radius: 5px;
    box-shadow: 0 0 10px 2px;
    padding: 0.8vw;

    display: flex;
    flex-flow: column;
    align-items: center;
  }
  
  /* Image */

  img {
    padding-top: 10px;
    max-width: 100%;
    max-height: 70%;
  }

  /* Button Space */

  .button-space {
    width: 100%;
    max-height: 45%;
    flex: 1;

    display: flex;
    flex-flow: column;
    align-items: center;
  }

  .btn {
    font-size: 5vh;
    color: white;
    background-color: rgb(0, 170, 255);
    border: 1px solid rgb(0, 102, 153);
    border-radius: 15px;
    padding: 5px 10px;
  }

  /* Answer Buttons */

  .btn-grid {
    width: 100%;
    height: 100%;
    padding: 0.8vw;
    gap: 20px;

    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
  }

  .btn-grid button {
    min-width: 100px;
    max-width: 30vw;
    min-height: 100px;
    max-height: 30vh;
    aspect-ratio: 1 / 1;

    background-color: white;
  }

  @media only screen and (max-device-width: 480px) and (orientation: portrait) {
    .btn-grid button {
      min-width: 50px;
      max-width: 20vw;
      min-height: 50px;
      aspect-ratio: 1 / 1;
      background-color: white;
    }
  }

  @media only screen and (max-device-width: 640px) and (orientation: landscape) {
    .btn-grid button {
      min-width: 35px;
      min-height: 35px;
      max-height: 15vh;
      aspect-ratio: 1 / 1;
      background-color: white;
    }
  }

  .btn-grid break {
    width: 100%;
    height: 0%;
  }

  .answer-btns {
    background-image: url('images/blackSquare.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: 90%;
    border: 5px solid rgb(0, 102, 153);
  }
  
  /* Control Buttons */

  .controls {
    width: 100%;
    align-self: end;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-areas: "cont cont cont " "prev finish next";

  }

  .continue-btn {
    font-size: 7vh;
    font-weight: bold;
    padding: 5px 5px;
    justify-self: center;
    grid-area: cont;
  }

  .start-btn {
    font-size: 7vh;
    font-weight: bold;
    padding: 5px 5px;
    justify-self: center;
    grid-area: cont;
  }

  .prev-btn {
    font-size: 4vh;
    font-weight: bold;
    padding: 5px 5px;
    justify-self: start;
    grid-area: prev;
  }

  .next-btn {
    font-size: 4vh;
    font-weight: bold;
    padding: 5px 5px;
    justify-self: end;
    grid-area: next;
  }

  .finish-btn{
    font-size: 4vh;
    font-weight: bold;
    padding: 5px 5px;
    justify-self: center;
    grid-area: finish;
  }

  /* Attributes */

  .hide {
    display: none;
  }

  /* Button Attributes */

  .btn:hover {
    border-color: black;
  }
  
  .btn.selected {
    border-color: rgb(207, 83, 11);
  }

  .btn.unavailable {
    opacity: 50%;
  }

